# data-parallel-smm-2d-convolution

./: .gitignore  CMakeLists.txt  README.md  README.rst  bare_builder.py  bench.py  gen_clangd.py  makefile  pyproject.toml  requirements.txt  run  run.py  setup.cfg  setup.py  todos.rst
.github/workflows/: build_docs.yml  docs_and_readme.yml  release_with_wheels.yml  update_readme.yml
ai3/: __init__.py  ai3_functions.pyi
ai3/csrc/: ai3.cpp  linear.cpp  linear.hpp
bench/: __init__.py  __main__.py  backward_step.py  compile.py  convert.py  gather.py  paper.py  swap_backend.py  swap_conv2d.py  tensor_type.py  vgg16.py
bench/layer/: adaptiveavgpool2d.py  avgpool2d.py  conv2d.py  flatten.py  linear.py  maxpool2d.py  relu.py
bench/layers/: __init__.py  adaptiveavgpool2d.py  avgpool2d.py  conv2d.py  flatten.py  linear.py  maxpool2d.py  relu.py
bench/models/: __init__.py  created_conv2d.py  vgg16.py  vgg16_swap_conv2d.py
bench/paper/: __main__.py  gather.py
bench/results/cudnn/: data_late_cudnn.pickle  data_late_middle_cudnn.pickle  early middle_cudnn.pickle  early_cudnn.pickle  models_cudnn.pickle
bench/swap_backend/: __init__.py  alexnet.py  convnext.py  densenet.py  efficientnet.py  googlenet.py  inception.py  maxvit.py  mnasnet.py  mobilenet.py  regnet.py  resnet.py  shufflenetv2.py  simple_created.py  squeezenet.py  swin_transformer.py  vgg16.py  vision_transformer.py
bench/swap_conv2d/: __init__.py  alexnet.py  convnext.py  densenet.py  efficientnet.py  googlenet.py  inception.py  maxvit.py  mnasnet.py  mobilenet.py  regnet.py  resnet.py  shufflenetv2.py  simple_created.py  squeezenet.py  swin_transformer.py  vgg16.py  vision_transformer.py
cmake/: FindSYCL.cmake
docs/: Doxyfile  algo_platform_tables.rst  build_all_docs.sh  conf.py  cpp.rst  create_base_html.py  dev.rst  framework_overview.drawio  gen_readme.py  home_footnotes  index.rst  intro.rst  performance.rst  python.rst
example/: custom_operator.py  func_with_input_shape.py  func_with_input_sizes.py  manual_conv2d.py  simple_conv2d.py  train.py  vgg16.py
examples/: xor.py
model_zoo/: __init__.py
models/: __init__.py
papers/IEEE_HPEC_24/: gather.py
papers/JOSS/: example.py  paper.bib  paper.md
runners/: __init__.py  alexnet.py  convnext.py  densenet.py  efficientnet.py  googlenet.py  helper.py  inception.py  maxvit.py  mnasnet.py  mobilenet.py  models.py  regnet.py  resnet.py  shufflenetv2.py  simple_created.py  squeezenet.py  swin_transformer.py  vgg16.py  vision_transformer.py
src/ai3/: __init__.py  _core.pyi  as_nn.py  core.pyi  errors.py  functional.py  functions.py  layers.py  model.py  swap_torch.py  tensor.py  utils.py
src/ai3/csrc/: adaptiveavgpool2d_plain.hpp  ai3.cpp  ai3.hpp  algo_paths.hpp  algos.hpp  avgpool2d_plain.hpp  context.hpp  conv2d_exec_cudnn.hpp  conv2d_plain.hpp  conv2d_sycl.hpp  conv2d_user_example.hpp  cublas_utils.hpp  cuda_utils.hpp  cudnn_utils.hpp  direct_conv2d_plain.hpp  direct_conv2d_sycl.hpp  errors.cpp  errors.hpp  flatten_plain.hpp  gemm_conv2d_cudnn.hpp  gemm_conv2d_plain.hpp  guess_conv2d_cudnn.hpp  guess_conv2d_plain.hpp  implicit_gemm_conv2d_cudnn.hpp  implicit_gemm_conv2d_plain.hpp  implicit_precomp_gemm_conv2d_cudnn.hpp  implicit_precomp_gemm_conv2d_plain.hpp  kn2row_conv2d.cpp  kn2row_conv2d.hpp  kn2row_parallel_cpu.cpp  kn2row_plain.cpp  kn2row_plain.hpp  kn2rowconv2d_plain.hpp  linear_plain.hpp  maxpool2d_plain.hpp  relu_plain.hpp  smm_conv2d_plain.hpp  smm_conv2d_sycl.hpp  tensor.hpp  user_defined.hpp  (+3 more)
src/ai3/csrc/adaptiveavgpool2d/: direct_plain.cpp  plain.hpp
src/ai3/csrc/avgpool2d/: direct_plain.cpp  plain.hpp
src/ai3/csrc/conv2d/: direct_plain.cpp  direct_plain.hpp  direct_sycl.cpp  direct_sycl.hpp  exec_cudnn.hpp  gemm_cudnn.cpp  gemm_cudnn.hpp  gemm_plain.cpp  gemm_plain.hpp  guess_cudnn.cpp  guess_cudnn.hpp  guess_plain.cpp  guess_plain.hpp  implicit_gemm_cudnn.cpp  implicit_gemm_cudnn.hpp  implicit_gemm_plain.cpp  implicit_gemm_plain.hpp  implicit_precomp_gemm_cudnn.cpp  implicit_precomp_gemm_cudnn.hpp  implicit_precomp_gemm_plain.cpp  implicit_precomp_gemm_plain.hpp  metal.h  metal.hpp  metal.mm  metal_metal.mm  metal_plain.cpp  mps.h  mps.hpp  mps.mm  mps_mps.mm  mps_plain.cpp  smm_plain.cpp  smm_plain.hpp  smm_sycl.cpp  smm_sycl.hpp  winograd_cudnn.cpp  winograd_cudnn.hpp  winograd_plain.cpp  winograd_plain.hpp
src/ai3/custom/: adaptiveavgpool2d.hpp  avgpool2d.hpp  conv2d.hpp  flatten.hpp  linear.hpp  maxpool2d.hpp  relu.hpp
test/: __init__.py  __main__.py  convert.py  swap_backend.py  swap_conv2d.py
test/integration/: __init__.py  created_conv2d.py  created_conv2d_swap_conv2d.py  embedded_sequentials.py  vgg16.py  vgg16_swap_conv2d.py
test/integration/swap_conv2d/: __init__.py  alexnet.py  convnext.py  densenet.py  efficientnet.py  googlenet.py  inception.py  maxvit.py  mnasnet.py  mobilenet.py  regnet.py  resnet.py  shufflenetv2.py  squeezenet.py  swin_transformer.py  vgg16.py  vision_transformer.py
test/ops/: __main__.py  backward.py  compile.py  opcheck.py  train.py
test/serialization/: copy.py  deepcopy.py  pickle.py
test/swap_backend/: __init__.py  alexnet.py  convnext.py  densenet.py  efficientnet.py  googlenet.py  inception.py  maxvit.py  mnasnet.py  mobilenet.py  regnet.py  resnet.py  shufflenetv2.py  simple_created.py  squeezenet.py  swin_transformer.py  vgg16.py  vision_transformer.py
test/swap_conv2d/: __init__.py  alexnet.py  convnext.py  densenet.py  efficientnet.py  googlenet.py  inception.py  maxvit.py  mnasnet.py  mobilenet.py  regnet.py  resnet.py  shufflenetv2.py  simple_created.py  squeezenet.py  swin_transformer.py  vgg16.py  vision_transformer.py
test/unit/: __init__.py  adaptiveavgpool2d.py  avgpool2d.py  conv2d.py  flatten.py  linear.py  maxpool2d.py  relu.py
tests/: __init__.py  __main__.py  conv2d.py
tests/integration/: __init__.py  __main__.py  created_conv2d.py  created_conv2d_swap_conv2d.py  vgg16.py  vgg16_swap_conv2d.py
tests/unit/: __init__.py  __main__.py  adaptiveavgpool2d.py  avgpool2d.py  conv2d.py  flatten.py  kn2rowconv2d.py  linear.py  maxpool2d.py  relu.py
(+11 files in other folders)
