[project]
name = "ai-3"
version = "0.0.1"
readme = "README.rst"
description = "Algorithmic Innovations for Accelerated Implementations of Artificial Intelligence"
dependencies = ["torch>=2.4"]
authors = [
{name = "Timothy Cronin", email = "tcroniniv@gmail.com"},
]

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project.optional-dependencies]
dev = ["numpy", "torchvision"]
format = ["autopep8"]
doc = ["sphinx", "breathe", "furo"]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["src/ai3"]
sdist.cmake = false
cmake.define = {"FIND_ACPP"="OFF", SKBUILD_PROJECT_NAME="ai3"}
