[project]
name = "ai-3"
version = "0.0.1"
readme = "README.rst"
description = "Algorithmic Innovations for Accelerated Implementations of Artificial Intelligence"
authors = [
{name = "Timothy Cronin", email = "tcroniniv@gmail.com"},
]

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project.optional-dependencies]
dev = ["numpy", "torch", "torchvision"]
format = ["autopep8"]
doc = ["sphinx", "breathe", "furo"]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["src/ai3"]
sdist.cmake = false
cmake.define = {SKBUILD_PROJECT_NAME="ai3"}
