[project]
name = "ai-3"
readme = "README.rst"
homepage = "https://github.com/KLab-ai3/ai3"
documentation = "https://example.com"
description = "Enables Algorithmic Selection and Customization in Deep Neural Networks"
authors = [
{name = "Timothy Cronin"}
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research"
]
dynamic = ["version"]
requires-python = ">=3.8"

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["src/ai3"]
sdist.cmake = false
cmake.define = {SKBUILD_PROJECT_NAME="ai3"}
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/ai3/_version.py"]

[tool.setuptools_scm]
write_to = "src/ai3/_version.py"

[project.optional-dependencies]
dev = ["numpy", "torch", "torchvision"]
format = ["autopep8"]
doc = ["sphinx", "breathe", "pydata-sphinx-theme"]
